--- a/Client/register.html
+++ b/Client/register.html
@@ -11,7 +11,10 @@
         <p>Enter Your Details</p>
         <input type="text" name = "first_name" placeholder="First Name" required>
         <input type="text" name = "last_name" placeholder="Last Name" required>
-        <input type="text" name = "address" placeholder="Home Address" required>
+        <label for="address">Enter your home address</label>
+        <input type="text" name = "number" placeholder="133" required>
+        <input type="text" name = "street_name" placeholder="Street Name" required>
+        <input type="text" name = "postcode" placeholder="Postcode" required>
         <input type="text" name = "username"placeholder="Username" required>
         <input type="text" name = "password" placeholder="Password" required>
         <input type="text" name = "password2" placeholder="Repeat Password" required>
