deleted goToPage function and started using verifyUser

--- a/Client/index.html
+++ b/Client/index.html
@@ -14,7 +14,7 @@
         <p>Login to your account</p>
         <input type="text" name = "username" placeholder="username" required>
         <input type="password" name = "password" placeholder="password" required>
-        <button type=submit> Sign In</button>
+        <button type=submit>Login</button>
     </form>
     <button name="create_account">Create an Account</button>
 
