--- a/Client/register.html
+++ b/Client/register.html
@@ -20,6 +20,7 @@
         <input type="text" name = "password2" placeholder="Repeat Password" required>
         <button type="submit">Create Account</button>
     </form>
+    <button name = "back_button">back</button>
     
 </body>
 </html>
