--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage</title>
+    <script src="./assets/homepage.js" defer></script>
 </head>
 <body>
     <p>hi</p>
