added relevant buttons to homepage.html and some relevant functions to homepage.js

--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -7,6 +7,8 @@
     <script src="./assets/homepage.js" defer></script>
 </head>
 <body>
-    <p>hi</p>
+    <button name="UsernameDropdown"></button>
+    <button name="RecyclingButton">Recycling</button>
+    <button name="BulkyWaste">Bulky Waste Collection</button>
 </body>
 </html>
