--- a/Client/register.html
+++ b/Client/register.html
@@ -16,8 +16,8 @@
         <input type="text" name = "street_name" placeholder="Street Name" required>
         <input type="text" name = "postcode" placeholder="Postcode" required>
         <input type="text" name = "username"placeholder="Username" required>
-        <input type="text" name = "password" placeholder="Password" required>
-        <input type="text" name = "password2" placeholder="Repeat Password" required>
+        <input type="password" name = "password" placeholder="Password" required>
+        <input type="password" name = "password2" placeholder="Repeat Password" required>
         <button type="submit">Create Account</button>
     </form>
     <button name = "back_button">back</button>
