--- a/Client/register.html
+++ b/Client/register.html
@@ -9,15 +9,15 @@
 <body>
     <form>
         <p>Enter Your Details</p>
-        <input type="text" name = "first_name" placeholder="First Name" required>
-        <input type="text" name = "last_name" placeholder="Last Name" required>
+        <input type="text" name = "first_name" placeholder="First Name" required value="Lais">
+        <input type="text" name = "last_name" placeholder="Last Name" required value="Moraes">
         <label for="address">Enter your home address</label>
-        <input type="text" name = "number" placeholder="133" required>
-        <input type="text" name = "street_name" placeholder="Street Name" required>
-        <input type="text" name = "postcode" placeholder="Postcode" required>
-        <input type="text" name = "username"placeholder="Username" required>
-        <input type="text" name = "password" placeholder="Password" required>
-        <input type="text" name = "password2" placeholder="Repeat Password" required>
+        <input type="text" name = "number" placeholder="133" required value="1">
+        <input type="text" name = "street_name" placeholder="Street Name" required value="Apple Street">
+        <input type="text" name = "postcode" placeholder="Postcode" required value="GL1 1AB">
+        <input type="text" name = "username"placeholder="Username" required value="laisjm">
+        <input type="text" name = "password" placeholder="Password" required value="lais">
+        <input type="text" name = "password2" placeholder="Repeat Password" required value="lais">
         <button type="submit">Create Account</button>
     </form>
     <button name = "back_button">back</button>
