fixed address model to include zone_id in the constructor

--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <button name="UsernameDropdown"></button>
+    <button name="Settings"></button>
     <button name="RecyclingButton">Recycling</button>
     <button name="BulkyWaste">Bulky Waste Collection</button>
 </body>
