--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage</title>
     <script src="./assets/homepage.js" defer></script>
+    <link rel="stylesheet" href="./assets/homepage.css">
 </head>
 <body>
     <button name="UsernameDropdown"></button>
