--- a/Client/index.html
+++ b/Client/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
     <script src="./assets/index.js" defer></script>
-    <link rel="stylesheet" href="./assets/styles.css">
-    
-
+    <link rel="stylesheet" href="./assets/index.css">
 </head>
 <body>
     <div class="container">
