--- a/Client/index.html
+++ b/Client/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Welcome to Florin Council Recycling</h1>
+            <h1>Welcome to WasteWise</h1>
         </header>
     </div>
     
