--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <button name="UsernameDropdown"></button>
-    <button name="Settings"></button>
+    <button name="Settings">Settings</button>
     <button name="RecyclingButton">Recycling</button>
     <button name="BulkyWaste">Bulky Waste Collection</button>
 </body>
