--- a/Client/index.html
+++ b/Client/index.html
@@ -20,10 +20,13 @@
             <input type="text" name = "username" placeholder="username" required>
             <input type="password" name = "password" placeholder="password" required>
             <button class="button" type=submit>Login</button>
-            <button class="button" name="create_account">Create an Account</button>
+            <button class="button" name="create_account">Create Account</button>
         </form>
+    <div>
+        <p>Obama quote</p>
     </div>
-<p>Obama quote</p>
+    </div>
+
 
 </body>
 </html>
