started making pop up recycling page on homepage

--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -20,7 +20,7 @@
         </div>
         
         <div name="main_buttons">
-            <button name="RecyclingButton">Recycling</button>
+            <button name="RecyclingButton">WasteWise</button>
             <button name="BulkyWaste">Bulky Waste Collection</button>
         </div>
     </div>
