--- a/Client/index.html
+++ b/Client/index.html
@@ -55,7 +55,7 @@
                   <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
                     <div class="text-white px-3 py-4 p-md-5 mx-md-4">
                       <h4 class="mb-4">Florin Council</h4>
-                      <p class="small mb-0">We are committed to preserving our environment and creating a sustainable future for all.</p>
+                      <p class="small mb-0">At WasteWise, our mission is to revolutionise waste management for Florin council by providing a comprehensive and sustainable platform that streamlines waste processes, fosters environmental responsibility, and promotes a cleaner and greener community. We are dedicated to empowering councils and residents alike to make informed decisions, reduce waste generation, maximise recycling efforts, and minimise the impact on our planet. Through innovative technologies, collaborative partnerships, and community engagement, we strive to create a future where waste is efficiently managed, resources are conserved, and our environment thrives for generations to come.</p>
                     </div>
                   </div>
                 </div>
