--- a/Client/register.html
+++ b/Client/register.html
@@ -9,15 +9,15 @@
 <body>
     <form>
         <p>Enter Your Details</p>
-        <input type="text" name = "first_name" placeholder="First Name" required>
-        <input type="text" name = "last_name" placeholder="Last Name" required>
+        <input type="text" name = "first_name" placeholder="First Name" value="affa" required>
+        <input type="text" name = "last_name" placeholder="Last Name" value="agag" required>
         <label for="address">Enter your home address</label>
-        <input type="text" name = "number" placeholder="133" required>
-        <input type="text" name = "street_name" placeholder="Street Name" required>
-        <input type="text" name = "postcode" placeholder="Postcode" required>
-        <input type="text" name = "username"placeholder="Username" required>
-        <input type="password" name = "password" placeholder="Password" required>
-        <input type="password" name = "password2" placeholder="Repeat Password" required>
+        <input type="text" name = "number" placeholder="133" value="1" required>
+        <input type="text" name = "street_name" placeholder="Street Name" value="Apple Street" required>
+        <input type="text" name = "postcode" placeholder="Postcode" value="GL1 1AB" required>
+        <input type="text" name = "username"placeholder="Username" value="lais" required>
+        <input type="password" name = "password" placeholder="Password" value="lais" required>
+        <input type="password" name = "password2" placeholder="Repeat Password" value="lais" required>
         <button type="submit">Create Account</button>
     </form>
     <button name = "back_button">back</button>
