added functionality to recycling pop up back button, and added functionality to wastewise this item button in homepage.js

--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -15,6 +15,7 @@
                 <div name="user_dropdown">
                     <button name="UsernameDropdown"></button>
                     <button name="Settings">Settings</button>
+                    <button name="Log_out">logout</button>
                 </div>
             </div>
         </div>
