--- a/Client/register.html
+++ b/Client/register.html
@@ -129,7 +129,7 @@
       
                       <div class="d-flex justify-content-end pt-3">
                         <button type="button" class="btn btn-light btn-lg">Reset all</button>
-                        <button type="button" class="btn btn-warning btn-lg ms-2">Submit form</button>
+                        <button type="submit" class="btn btn-warning btn-lg ms-2">Submit form</button>
                       </div>
       
                     </div>
