initialised admin page with main buttons and user settings, linked admin page to home page with a home button

--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -17,7 +17,7 @@
                     <div name = "user_dropdown_content">
                         <button name="Settings">Settings</button>
                         <button name="points_button"></button>
-                        <button name="Log_out">logout</button>
+                        <button name="Log_out">Logout</button>
                     </div>
                 </div>
             </div>
