--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
     <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -52,8 +51,7 @@
                             <div class="features-icons-icon d-flex"><button class="btn btn-primary btn-lg" name="BulkyWaste">Bulky Waste Collection</button></div>                            
                         </div>
                     </div>                    
-=======
-    <meta charset="UTF-8">
+    <!-- <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage</title>
     <script src="./assets/homepage.js" defer></script>
@@ -71,9 +69,8 @@
                         <button name="points_button"></button>
                         <button name="Log_out">Logout</button>
                     </div>
->>>>>>> 89ff25946abc76844a5e212344e9f7e9778fd357
                 </div>
-            </div>
+            </div> -->
         </section>        
     </div>   
 
