--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -38,7 +38,7 @@
     <div>
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <p>Florin Council</p>
+                <p>WasteWise</p>
                 <div name="user_dropdown">
                     <button class = "btn btn-primary" name="UsernameDropdown"></button>
                     <div name = "user_dropdown_content">
@@ -56,7 +56,7 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white" name = "bin_and_user">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Bin</h1>                            
+                            <h1 class="mb-5">Lookout</h1>                            
                         </div>
                     </div>
                 </div>
