--- a/Client/admin.html
+++ b/Client/admin.html
@@ -25,8 +25,8 @@
         
         <div name="main_buttons">
             <button name="resident_database">Adjust Resident Database</button>
-            <button name="items_database">Adjust Items Database</button>
-            <button name="addresses_database">Adjust Addresses Database</button>
+            <button name="items_database">Adjust Addresses Database</button>
+            <button name="addresses_database">Adjust Bin Collections</button>
             <button name="appointments">View Appointments</button>
             <button name="home_button">Home</button>
         </div>
