--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -54,7 +54,7 @@
             <div class="container position-relative">
                 <div class="row justify-content-center">
                     <div class="col-xl-6">
-                        <div class="text-center text-white" name = "bin_and_user">
+                        <div  class="text-center text-white" name = "bin_and_user" style = "position:relative; top:-150px">
                             <!-- Page heading-->
                             <h1 class="mb-5">Lookout</h1>                            
                         </div>
