png added plus more css

--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -40,11 +40,11 @@
             <div class="container">
                 <p>WasteWise</p>
                 <div name="user_dropdown">
-                    <button class = "btn btn-primary" name="UsernameDropdown"></button>
+                    <button style="background:#E0B1A9;color:white;" class = "btn btn-primary" name="UsernameDropdown"></button>
                     <div name = "user_dropdown_content">
-                        <button name="Settings" class = "btn btn-primary">Settings</button>
-                        <button name="points_button" class = "btn btn-primary"></button>
-                        <button name="Log_out" class = "btn btn-primary">Logout</button>
+                        <button style="background:hsl(146, 92%, 33%);color:white;" name="Settings" class = "btn btn-primary">Settings</button>
+                        <button style="background:hsl(146, 92%, 33%);color:white;" name="points_button" class = "btn btn-primary"></button>
+                        <button style="background:hsl(357, 75%, 46%);color:white;" name="Log_out" class = "btn btn-primary">Logout</button>
                     </div>
                 </div>               
             </div>
@@ -65,14 +65,14 @@
         <section class="features-icons bg-light text-center">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4">                        
+                    <div class="col-lg-8">                        
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <div class="features-icons-icon d-flex"><button class="btn btn-primary btn-lg" name="RecyclingButton">WasteWise</button></div>
+                            <div class="features-icons-icon d-flex"><button style="background:hsl(357, 75%, 46%);color:white;" class="btn btn-primary btn-success" name="RecyclingButton">WasteWise</button></div>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <div class="features-icons-icon d-flex"><button class="btn btn-primary btn-lg" name="BulkyWaste">Bulky Waste Collection</button></div>                            
+                            <div class="features-icons-icon d-flex"><button style="background:hsl(357, 75%, 46%);color:white;" class="btn btn-block" name="BulkyWaste">Bulky Waste</button></div>                            
                         </div>
                     </div>
                     <div class="col-lg-4">                        
