--- a/Client/register.html
+++ b/Client/register.html
@@ -17,7 +17,7 @@
               <div class="card card-registration my-4">
                 <div class="row g-0">
                   <div class="col-xl-6 d-none d-xl-block">
-                    <img src="./assets/images/trees.jpg"
+                    <img src="./assets/images/trees.png"
                       alt="Sample photo" class="img-fluid"
                       style="border-top-left-radius: .25rem; width: 800px; height: 1030px; border-bottom-left-radius: .25rem;" />
                   </div>
