--- a/Client/admin.html
+++ b/Client/admin.html
@@ -10,7 +10,11 @@
 <body>
     <div name="whole_page">
             <div id="florin_and_user">
-                <p>Florin Council</p>
+                <div>
+                    <p>Florin Council</p>
+                    <button name="home_button">Home</button>
+                </div>
+                
                 <p name="big_title">Admin</p>
                 <div name="user_dropdown">
                     <button name="UsernameDropdown"></button>
@@ -26,9 +30,7 @@
         <div name="main_buttons">
             <button name="resident_database">Adjust Resident Database</button>
             <button name="address_database">Adjust Addresses Database</button>
-            <button name="collections_database">Adjust Bin Collections</button>
             <button name="appointments">View Appointments</button>
-            <button name="home_button">Home</button>
         </div>
     </div>
 </body>
