styled admin page

--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -40,11 +40,11 @@
             <div class="container">
                 <p>WasteWise</p>
                 <div name="user_dropdown">
-                    <button style="background:#E0B1A9;color:white;" class = "btn btn-primary" name="UsernameDropdown"></button>
+                    <button  name="UsernameDropdown" id = "drop_down_btn"></button>
                     <div name = "user_dropdown_content">
-                        <button style="background:hsl(146, 92%, 33%);color:white;" name="Settings" class = "btn btn-primary">Settings</button>
-                        <button style="background:hsl(146, 92%, 33%);color:white;" name="points_button" class = "btn btn-primary"></button>
-                        <button style="background:hsl(357, 75%, 46%);color:white;" name="Log_out" class = "btn btn-primary">Logout</button>
+                        <button name="Settings"  id = "drop_down_btn">Settings</button>
+                        <button name="points_button" id = "drop_down_btn"></button>
+                        <button name="Log_out" id = "drop_down_btn">Logout</button>
                     </div>
                 </div>               
             </div>
