--- a/Client/admin.html
+++ b/Client/admin.html
@@ -38,6 +38,12 @@
             <button name="appointments" id = "function_button">View Appointments</button>
         </div>
     </div>
+
+    <footer id ="footer">
+        <div>                   
+            <p>&copy; Recycle Bin 2023. All Rights Reserved.</p>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
