GOT ALL THE STYLING

--- a/Client/homepage.html
+++ b/Client/homepage.html
@@ -45,6 +45,7 @@
                 <button  name="UsernameDropdown" id = "drop_down_btn"></button>
                 <div name = "user_dropdown_content">
                     <button name="Settings"  id = "drop_down_btn">Settings</button>
+                    <button name = "How" id = "drop_down_btn">How To</button>
                     <button name="points_button" id = "drop_down_btn"></button>
                     <button name="Log_out" id = "drop_down_btn">Logout</button>
                 </div>
