i promise last one guys

--- a/Client/register.html
+++ b/Client/register.html
@@ -71,13 +71,13 @@
 
                       <div class="form-outline mb-4">
                         <!-- <input type="password" name = "password" placeholder="Password" value="lais" required> -->
-                        <input type="text" type="password" name = "password" placeholder="Password" id="form3Example8" class="form-control form-control-lg" required/>
+                        <input type="password" type="password" name = "password" placeholder="Password" id="form3Example8" class="form-control form-control-lg" required/>
                         <label class="form-label" for="form3Example8">Password</label>
                       </div>
 
                       <div class="form-outline mb-4">
                         <!-- <input type="password" name = "password2" placeholder="Repeat Password" value="lais" required> -->
-                        <input type="text" type="password" name = "password2" placeholder="Repeat Password" id="form3Example8" class="form-control form-control-lg" required/>
+                        <input type="password" type="password" name = "password2" placeholder="Repeat Password" id="form3Example8" class="form-control form-control-lg" required/>
                         <label class="form-label" for="form3Example8">Repeat Password</label>
                       </div>
 
